--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,27 @@
 			 var id = $('#id').val();
 			 var name = $('#name').val();
 			 var phoneNumber = $('#phoneNumber').val();
-			 alert(id + "  " + name + " " + phoneNumber);
+			 
+			 
+			 // Saving using ajax
+			 $.ajax({
+				method: "POST",
+				url: "/student/add", //localhost:8080/student/add
+				data: JSON.stringify(
+					{ 
+						id: id,
+						name: name,
+						phoneNumber: phoneNumber
+					}
+				),
+				contentType: "application/json; charset=utf-8",
+				success: function (response){
+					alert("Successfully created!");
+				}
+			 }).fail( function (xhr, status, errorThrown){
+				   alert("Error. It was not possible created:"+xhr.responseText );
+			 } );
+		 
 		 }
 		</script>
 		
