--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
 <title>Simple API</title>
 <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
 <body>
@@ -29,9 +30,6 @@
 		
 		<script type="text/javascript">
 		 
-		 var id = $('#id').val();
-		 var name = $('#name').val();
-		 var phoneNumber = $('#phoneNumber').val();
 		 
 		 function cleanFieldsStudent(){
 			 $('#id').val("");
@@ -40,7 +38,10 @@
 		 }
 		 
 		 function saveStudent(){
-			 
+			 var id = $('#id').val();
+			 var name = $('#name').val();
+			 var phoneNumber = $('#phoneNumber').val();
+			 alert(id+" "+name+" "+phoneNumber);	 
 			 // Saving using ajax
 			 $.ajax({
 				method: "POST",
