clean fieds using jquery

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,17 +25,11 @@
 			  <input type="number" class="form-control" id="id" >
 			</div>
 			<button class="btn btn-info" onclick="saveStudent()">Save</button>
-			<button class="btn btn-info" onclick="cleanFieldsStudent()">Clean fields</button>
+			<button class="btn btn-info" onclick="this.form.reset();">Clean fields</button>
 		</form>
 		
 		<script type="text/javascript">
 		 
-		 
-		 function cleanFieldsStudent(){
-			 $('#id').val("");
-			 $('#name').val("");
-			 $('#phoneNumber').val("");
-		 }
 		 
 		 function saveStudent(){
 			 var id = $('#id').val();
