--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,9 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	
+	<!-- Bootstrap ICON -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
@@ -45,10 +48,10 @@
         
         <form>
           <div class="form-group">
-            <input type="text" class="form-control" id="recipient-name" placeholder="Search by name, id, phone number">
+            <input type="text" class="form-control" id="key-word-from-form-seach" placeholder="Search by name">
           </div>
           <div class="form-group">
-          	<button type="button" class="btn btn-primary" onclick="searchStudent()">Search</button>
+          	<button type="button" class="btn btn-primary" onclick="searchStudent()" >Search</button>
           </div>
         </form>
         
@@ -64,7 +67,7 @@
 		  <tbody>
 		  </tbody>
 		</table>
-        
+       
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -75,26 +78,37 @@
 		</form>
 		
 		<script type="text/javascript">
-		 
 		
+		 
 		function searchStudent(){
 			
-			 var keyWord = $('#search-result').val();
-			 // Saving using ajax
-			 $.ajax({
-				method: "GET",
-				url: "/student/search", //localhost:8080/student/add
-				data: keyWord,
-				contentType: "application/json; charset=utf-8",
-				success: function (response){
-					// response has all values from this particular user 
-					
-					alert("Successfully created!");
-					$('#id').val(response.id);
-				}
-			 }).fail( function (xhr, status, errorThrown){
-				   alert("Error. It was not possible created:"+xhr.responseText );
-			 } );
+			 var keyWord = $('#key-word-from-form-seach').val();
+			 	 
+				// Saving using ajax
+				 $.ajax({
+					method: "GET",
+					url: "/student/search", //localhost:8080/student/add
+					data: "keyWord="+keyWord,
+					contentType: "application/json; charset=utf-8",
+					success: function (response){
+						// response has all values from this particular user 
+						
+						$('#search-result > tbody > tr').remove();
+						for (var i = 0; i < response.length; i++){
+							$('#search-result > tbody ').append(
+														'<tr id="student-row-deleted">'
+														+'<td>'+response[i].id+'</td>'
+														+'<td>'+response[i].name+'</td>'
+														+'<td>'+response[i].phoneNumber+'</td>'
+														+'<td> <i class="bi-pencil-square" onclick="edit('+response[i].id+')"></i></td>'
+														+'<td> <i class="bi-trash-fill" onclick="deleteStudent('+response[i].id+')"></i> </td>'
+														+'</tr>'
+								);
+						}
+					}
+				 }).fail( function (xhr, status, errorThrown){
+					   alert("Error. It was not possible created:"+xhr.responseText );
+				 } );
 			
 			
 		}
@@ -123,12 +137,55 @@
 					
 					alert("Successfully created!");
 					$('#id').val(response.id);
+				
 				}
 			 }).fail( function (xhr, status, errorThrown){
 				   alert("Error. It was not possible created:"+xhr.responseText );
 			 } );
 		 
 		 }
+		 
+		 function edit(id){
+				// Saving using ajax
+				 $.ajax({
+					method: "GET",
+					url: "/student/get", //localhost:8080/student/add
+					data: "id="+id,
+					contentType: "application/json; charset=utf-8",
+					success: function (response){
+						// response has all values from this particular user 
+
+				         $('#id').val(response.id);
+						 $('#name').val(response.name);
+						 $('#phoneNumber').val(response.phoneNumber);
+						 //$('#exampleModal').modal('hide');
+					}
+				 }).fail( function (xhr, status, errorThrown){
+					   alert("Error. It was not possible created:"+xhr.responseText );
+				 } );
+			
+		 }
+		 
+		 
+		 function deleteStudent(id){
+			
+				// Saving using ajax
+				 $.ajax({
+					method: "DELETE",
+					url: "/student/delete", //localhost:8080/student/add
+					data: "id="+id,
+					contentType: "application/json; charset=utf-8",
+					success: function (response){
+		
+						$('#student-row-deleted').hide();
+						
+					}
+				 }).fail( function (xhr, status, errorThrown){
+					   alert("Error. It was not possible created:"+xhr.responseText );
+				 } );
+			
+		 }
+		 
 		 
 		</script>
 		
