--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	
+	<script type="text/javascript" src="server-requests.js"></script>
 	<!-- Bootstrap ICON -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -17,7 +17,8 @@
 </head>
 <body>
 	<main class="container">
-		<h1>Hello Spring boot é ç</h1>
+		<h1>Simple Student Spring Boot API Using Ajax Request</h1>
+		
 		<form action="#" id="formRegisterStudent">
 			<div class="mb-3">
 			  <label for="name" class="form-label">Name</label>
@@ -76,123 +77,7 @@
   </div>
 </div>
 		</form>
-		
-		<script type="text/javascript">
-		
-		 
-		function searchStudent(){
-			
-			 var keyWord = $('#key-word-from-form-seach').val();
-			 
-			 if (keyWord.length < 1){
-				 alert("Error on seaching student: Type at least a letters");
-			 }else{
-				 
-			 
-				// Saving using ajax
-				 $.ajax({
-					method: "GET",
-					url: "/student/search/"+keyWord, 
-					contentType: "application/json; charset=utf-8",
-					success: function (response){
-						// response has all values from this particular user 
-						
-						$('#search-result > tbody > tr').remove();
-						for (var i = 0; i < response.length; i++){
-							$('#search-result > tbody ').append(
-														'<tr class="hide-deteted'+response[i].id+'"+>'
-														+'<td>'+response[i].id+'</td>'
-														+'<td>'+response[i].name+'</td>'
-														+'<td>'+response[i].phoneNumber+'</td>'
-														+'<td> <i class="bi-pencil-square" onclick="edit('+response[i].id+')"></i></td>'
-														+'<td> <i class="bi-trash-fill " onclick="deleteStudent('+response[i].id+')"></i> </td>'
-														+'</tr>'
-								);
-						}
-					}
-				 }).fail( function (xhr, status, errorThrown){
-					   alert("Error. It was not possible created:"+xhr.responseText );
-				 } );
 				
-				
-			 }
-			
-		}
-		
-		
-		
-		 
-		 function saveStudent(){
-			 var id = $('#id').val();
-			 var name = $('#name').val();
-			 var phoneNumber = $('#phoneNumber').val();
-			 // Saving using ajax
-			 $.ajax({
-				method: "POST",
-				url: "/student/add", //localhost:8080/student/add
-				data: JSON.stringify(
-					{ 
-						id: id,
-						name: name,
-						phoneNumber: phoneNumber
-					}
-				),
-				contentType: "application/json; charset=utf-8",
-				success: function (response){
-					// response has all values from this particular user 
-					
-					alert("Successfully created!");
-					$('#id').val(response.id);
-				
-				}
-			 }).fail( function (xhr, status, errorThrown){
-				   alert("Error. It was not possible created:"+xhr.responseText );
-			 } );
-		 
-		 }
-		 
-		 function edit(id){
-				// Saving using ajax
-				 $.ajax({
-					method: "GET",
-					url: "/student/get/"+id, 
-					contentType: "application/json; charset=utf-8",
-					success: function (response){
-						// response has all values from this particular user 
-
-				         $('#id').val(response.id);
-						 $('#name').val(response.name);
-						 $('#phoneNumber').val(response.phoneNumber);
-						 //$('#exampleModal').modal('hide');
-					}
-				 }).fail( function (xhr, status, errorThrown){
-					   alert("Error. It was not possible created:"+xhr.responseText );
-				 } );
-			
-		 }
-		 
-		 
-		 function deleteStudent(id){
-			
-				// Saving using ajax
-				 $.ajax({
-					method: "DELETE",
-					url: "/student/delete/"+id, 
-					contentType: "application/json; charset=utf-8",
-					success: function (response){
-		
-						$('.hide-deteted'+id).hide(1500);
-						
-					}
-				 }).fail( function (xhr, status, errorThrown){
-					   alert("Error. It was not possible created:"+xhr.responseText );
-				 } );
-			
-		 }
-		 
-		 
-		</script>
-		
 	</main>
 
 </body>
